static/styles/zulip.css
/* ... */
.user_offline .user-status-indicator {
    background-color: none;
    border-color: gray;
}

#user_presences a, #group-pms a {
    color: #333;
}

#invite-user-link i {
    text-decoration: none;
    margin-right: 5px;
}

ul.filters {
    list-style-type: none;
}

.message_header_stream a.message_label_clickable,
ul.filters a {
    color: #333;
}

ul.filters hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

li.active-filter,
li.active-subject-filter {
    font-weight: bold;
    background: #ccd6cc;
    position: relative;
}

li.active-filter:after,
li.active-subject-filter:after {
    content: "";
    position: absolute;
    top: 50%;
    right: -6px;
    margin-top: -6px;
    display: block;
    border-top: 6px solid transparent;
    border-bottom: 6px solid transparent;
    border-left: 6px solid #ccd6cc;
}

li.hidden-filter {
    visibility: hidden;
    display: none;
}

ul.filters {
    margin-left: 0px;
    padding-right: 10px;
}

#global_filters .global-filter {
    position: relative;
}

.user_sidebar_entry .selectable_sidebar_block,
.group-pms-sidebar-entry .selectable_sidebar_block {
    width: 170px;
    display: block;
}

.group-pm-link {
    margin-left: 17px;
    display: block;
}

.user_sidebar_entry .selectable_sidebar_block {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.user_sidebar_entry.user-with-count .selectable_sidebar_block {
    width: 150px;
}

.user_sidebar_entry.user-with-count .count {
    display: inherit;
}

.group-pms-sidebar-entry.group-with-count .selectable_sidebar_block {
    width: 170px;
}

.user_sidebar_entry .count,
.group-pms-sidebar-entry .count,
#global_filters .count,
#stream_filters .count {
    position: absolute;
    right: 20px;
    top: 4px;
    padding: 2px 3px 1px 3px;
    background: #80837f;
    color: #ffffff;
    border-radius: 1px;
    font-size: 11px;
    font-weight: normal;
}

.group-pms-sidebar-entry .count {
    right: 2px;
}

#stream_filters .count,
#global_filters .count {
    margin-left: 0.5em;
    display: none;
}

.user_sidebar_entry .count,
.group-pms-sidebar-entry .count,
#global_filters .count
{
    line-height: 11px;
    top: 3px;
}

.subject_count {
    display: block;
    position: absolute;
    line-height: 1em;
    right: 20px;
    top: 2px;
    padding: 2px 3px 0px 3px;
    background: #a6ada4;
    color: #ffffff;
    border-radius: 1px;
    font-size: 11px;
    font-weight: normal;
}

ul.filters i {
    padding-right: 0.25em;
    /* Make filter icons the same width so labels line up. */
    display: inline-block;
    width: 13px;
}

li.actual-dropdown-menu i {
    /* In gear menu, make icons the same width so labels line up. */
    display: inline-block;
    width: 14px;
}

ul.filters .arrow {
    position: absolute;
    right: 0px;
    top: 2px;
    font-size: 0.8em;
    display: none;
}

ul.filters li:hover .arrow {
    display: inline;
    cursor: pointer;
    color: #888;
}

ul.filters li .arrow:hover {
    display: inline;
    cursor: pointer;
    color: #000;
}

ul.filters .topic-sidebar-arrow {
    font-size: 0.7em;
    top: 1px;
    display: none !important;
}

ul.filters li.expanded_subject:hover .topic-sidebar-arrow {
    display: inline !important;
    cursor: pointer;
    color: #888;
}

ul.filters li.expanded_subject .topic-sidebar-arrow:hover {
    display: inline;
    cursor: pointer;
    color: #000;
}

ul.filters li.muted_topic,
ul.filters li.out_of_home_view {
    opacity: 0.25;
}

.message_list {
}

.message_area_padder {
    /* The height of the header and the tabbar plus a small gap */
    margin-top: 68px;
    /* This is needed for the floating recipient bar
     in Firefox only, for some reason; otherwise it gets
     a scrollbar */
    overflow: visible;
    padding-left: 9px;
}


.message_comp {
    display: none;
    padding: 10px 10px 8px 5px;
}

#compose_buttons {
    text-align: center;
}

td.pointer {
    vertical-align: top;
    padding-top: 10px;
    background-color: #fff;
}

.new_messages {
    background-color: lightblue;
}

.new_messages,
.new_messages_fadeout {
    -webkit-transition: all 3s ease-in-out;
    -moz-transition: all 3s ease-in-out;
    -o-transition: all 3s ease-in-out;
    transition: all 3s ease-in-out;
}

.include-sender .message_edit_notice {
    display: inline-block;
    vertical-align: top;
    line-height: 14px;
    margin-left: -10px;
    position: static;
    padding: 0px;
    width: auto;
}

.message_edit_notice {
    font-size: 10px;
    color: #a1a1a1;
    font-weight: 300;
    line-height: 0px;
    text-align: right;
    width: 45px;
    position: relative;
    right: 11px;
    padding-bottom: 10px;
}

.include-sender .message_edit_notice:before {
    content: "(";
}

.include-sender .message_edit_notice:after {
    content: ")";
}

.include-sender .message_time {
    position: relative;
    left: 2px;
    line-height: 14px;
    vertical-align: top;
    text-align: left;
}

.message_time {
    display: inline-block;
    font-weight: normal;
    font-size: 11px;
    color: #aaa;
    vertical-align: middle;
    padding: 0px;
    font-weight: 300;
    position: absolute;
    width: 45px;
    left: -11px;
    line-height: 24px;
    text-align: right;
}

.message_time.status-time {
    line-height: 35px;
}

.message_controls {
    display: inline-block;
    position: absolute;
    top: 2px;
    right: -50px;
}

.include-sender .message_controls {
    top: -2px;
}

.message_data {
    vertical-align: top;
    text-align: left;
    padding: 0px;
    background-color: #fff;
    position: relative;
}

.message_header {
    vertical-align: middle;
    text-align:     left;

    /* We can overflow-y if the font size gets big */
    overflow:       hidden;
    text-overflow:  ellipsis;
    white-space:    nowrap;
    font-weight:    600;
    line-height:    14px;
}
/* ... */

